# paulssonlab

./: .editorconfig  .envrc  .envrc_base  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  directory_tag.py  environment.yml  fix-environment-files.sh  pyproject.toml  setup.py
paulssonlab/: README.md  __init__.py  cli.py  pyproject.toml
paulssonlab/api/: __init__.py  addgene.py  geneious.py  geneious_db.py
paulssonlab/api/google/: __init__.py  calendar.py  drive.py  util.py
paulssonlab/cloning/: design.py  environment.yml  enzyme.py  plotting.py  registry.py  thermodynamics.py
paulssonlab/cloning/commands/: parser.py
paulssonlab/cloning/webhooks/: .dockerignore  Dockerfile  README.md  app.py  cloudbuild.yaml  requirements.txt
paulssonlab/deaton/CRISPRi_Libraries/: .gitignore  environment.yml
paulssonlab/deaton/flowcyto/: environment.yml
paulssonlab/deaton/marlin/: handler.py  scope.py
paulssonlab/deaton/marlin_libraries/: .gitignore  README.md
paulssonlab/deaton/microscope/: MicroManager_Control_DE.ipynb  MicroManager_Control_DE_new.ipynb  README.md  _test.py
paulssonlab/deaton/nanopore/: .envrc  .gitignore  environment.yml
paulssonlab/deaton/promoter_mutants/: .envrc
paulssonlab/deaton/trenchripper/: Master.ipynb
paulssonlab/image_analysis/: commands.py  environment.yml
paulssonlab/inventory/: Demo.ipynb  __init__.py  cli.py  core.py  json_util.py
paulssonlab/quansight/: Trench finding demo.ipynb
paulssonlab/sequencing/: environment.yml  functions.nf
paulssonlab/util/: core.py  threading.py
(+2243 files in other folders)
