[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module="paulssonlab"
author="Jacob Quinn Shenker"
author-email="jacob@shenker.net"
home-page="https://github.com/paulssonlab/paulssonlab"
requires=[]
requires-python=">=3.7"
description-file="README.md"
classifiers=[
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Recognition"
]

[tool.black]
line-length = 88
skip-string-normalization = false
